# vs-code-refactoring-bug

./: README.md  pyproject.toml
vs_code_refactoring_bug/: core.py  using_core.py
