[tool.poetry]
name = "vs-code-refactoring-bug"
version = "0.1.0"
description = ""
authors = ["Lorenz Walthert <lorenzwalthert@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.pyright]
include = ["vs_code_refactoring_bug/src/"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
